# ex2

./: CMakeLists.txt  GetInput.cpp  GetInput.h  GetOutput.cpp  GetOutput.h  InputValidation.cpp  InputValidation.h  Knn.cpp  Knn.h  KnnManager.cpp  KnnManager.h  Makefile  README.md  main.cpp
